--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">GuardianNewsFeed</string>
+    <string name="app_name">Guardian News Feed</string>
+    <string name="family">Family</string>
+    <string name="health">Health</string>
+    <string name="music">Music</string>
+    <string name="sport">Sport</string>
+
 </resources>
